[package]
name = "sisyphus"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"
description = "Execution-agnostic, time-agnostic, no_std, zero-allocation backoff & retry state machine."
license = "MIT OR Apache-2.0"
repository = "https://github.com/niklabh/sisyphus"
homepage = "https://github.com/niklabh/sisyphus"
documentation = "https://docs.rs/sisyphus"
readme = "README.md"
keywords = ["backoff", "retry", "no-std", "wasm", "embedded"]
categories = ["no-std", "algorithms", "asynchronous"]
exclude = [".github/", "/.gitignore"]

[features]
# Default build is pure `core`: no `std`, no `alloc`, no dynamic dispatch.
default = []
# Enables `alloc`-backed conveniences such as boxed (`dyn`) policies.
alloc = []
# Enables `std`-backed conveniences such as `SystemClock`.
std = []

[dependencies]

[dev-dependencies]

# `system_clock` relies on the optional `SystemClock`, so it needs the `std`
# feature. All other examples run on the default (pure-core) build.
[[example]]
name = "system_clock"
required-features = ["std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
